--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,129 @@
-certifi==2017.7.27.1
+alembic==1.0.8
+apparmor==2.13.2
+apturl==0.5.2
+asn1crypto==0.24.0
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
+blinker==1.4
+Brlapi==0.6.7
+certifi==2019.3.9
 chardet==3.0.4
-click==6.7
-dash==0.17.7
-dash-core-components==0.12.0
-dash-html-components==0.7.0
-dash-renderer==0.7.4
+Click==7.0
+command-not-found==0.3
+cryptography==2.3
+cupshelpers==1.0
+dash==0.43.0
+dash-core-components==0.48.0
 dash-daq==0.1.5
-decorator==4.1.2
-Flask==0.12.3
+dash-html-components==0.16.0
+dash-renderer==0.24.0
+dash-table==3.7.0
+decorator==4.4.0
+defer==1.0.6
+defusedxml==0.5.0
+distro==1.3.0
+distro-info===0.21ubuntu2
+entrypoints==0.3
+Flask==1.0.3
 Flask-Compress==1.4.0
+Flask-Login==0.4.1
+Flask-Migrate==2.4.0
 Flask-SeaSurf==0.2.2
-idna==2.6
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+gunicorn==19.9.0
+html5lib==1.0.1
+httplib2==0.11.3
+idna==2.8
+ipykernel==5.1.1
+ipython==7.5.0
 ipython-genutils==0.2.0
-itsdangerous==0.24
-Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter-core==4.3.0
-MarkupSafe==1.0
-nbformat==4.3.0
-numpy==1.16.2
+ipywidgets==6.0.0
+itsdangerous==1.1.0
+jedi==0.13.3
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+keyring==17.1.1
+keyrings.alt==3.1.1
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+LibAppArmor==2.13.2
+louis==3.8.0
+lxml==4.3.2
+macaroonbakery==1.2.1
+Mako==1.0.8
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbconvert==5.4.0
+nbformat==4.4.0
+netifaces==0.10.4
+notebook==5.7.4
+numpy==1.16.4
+oauthlib==2.1.0
+olefile==0.46
 pandas==0.24.2
-plotly==2.0.13
-python-dateutil==2.6.1
-pytz==2017.2
-requests==2.20.0
-six==1.10.0
-SQLAlchemy==1.1.13
+pandas-datareader==0.7.0
+pandocfilters==1.4.2
+parso==0.4.0
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.4.1
+plotly==3.10.0
+prometheus-client==0.5.0
+prompt-toolkit==2.0.9
+protobuf==3.6.1
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+pyexpect==1.0.19
+Pygments==2.3.1
+PyGObject==3.32.0
+PyJWT==1.7.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyRFC3339==1.1
+pyrsistent==0.14.11
+python-apt==1.8.4
+python-dateutil==2.8.0
+python-debian==0.1.34
+python-editor==1.0.4
+pytz==2019.1
+pyxdg==0.25
+PyYAML==3.13
+pyzmq==17.1.2
+reportlab==3.5.18
+requests==2.22.0
+requests-unixsocket==0.1.5
+retrying==1.3.3
+SecretStorage==2.3.1
+selenium==3.141.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+simplejson==3.16.0
+six==1.12.0
+SQLAlchemy==1.3.4
+system-service==0.3
+systemd-python==234
+terminado==0.8.1
+testpath==0.4.2
+tornado==5.1.1
 traitlets==4.3.2
-urllib3==1.24.2
-Werkzeug==0.12.2
-Requirement already satisfied: numpy in /home/ross/.local/lib/python3.7/site-packages 
-(from -r requirements.txt (line 21)) (1.16.2)
-Requirement already satisfied: pandas in /home/ross/.local/lib/python3.7/site-packages 
-(from -r requirements.txt (line 22)) (0.24.2)
-
-
+ubuntu-advantage-tools==19.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.3
+usb-creator==0.3.3
+wadllib==1.3.3
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.15.4
+wrapt==1.11.1
+WTForms==2.2.1
+xkit==0.0.0
